--- a/dzp.html
+++ b/dzp.html
@@ -21,7 +21,7 @@
 
 		alertUI("你已经抽过奖了，抽中 价值799元满天星纯银手镯！",'',function(){
 
-			location.href = "index.htm";
+			location.href = "index.html";
 
 		});
 
